--- a/index.html
+++ b/index.html
@@ -4,8 +4,132 @@
       <title>Xander</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-width=1.0">
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
       <h1>Xander's website</h1>
+      <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Day</th>
+      <th scope="col">Exercise</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Lower body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">5</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">7</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">8</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">9</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">10</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">11</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">12</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">13</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">14</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">15</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">16</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">17</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">18</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">19</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">20</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">21</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">22</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">23</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">24</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">25</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">26</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">27</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">28</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">29</th>
+      <td>Upper body workout</td>
+    </tr>
+    <tr>
+      <th scope="row">30</th>
+      <td>Lower body workout</td>
+    </tr><tr>
+      <th scope="row">31</th>
+      <td>Upper body workout</td>
+    </tr>
+  </tbody>
+</table>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
